# lexique3-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  test_api.sh
src/: main.rs
